<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/phone_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/welcome_screen_text"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_android"
            app:layout_constraintBottom_toTopOf="@+id/welcome_header"
            app:layout_constraintDimensionRatio="w,2:3"
            app:layout_constraintEnd_toEndOf="@+id/welcome_header"
            app:layout_constraintStart_toStartOf="@+id/welcome_header"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_digital_clinic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/dark_special"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:gravity="center_horizontal"
            android:text="@string/health_services_always"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/dark_special"
            app:layout_constraintEnd_toEndOf="@+id/welcome_header"
            app:layout_constraintStart_toStartOf="@+id/welcome_header"
            app:layout_constraintTop_toBottomOf="@+id/welcome_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp"
            android:text="@string/proceed"
            android:textColor="@color/white"
            app:backgroundTint="@color/dark_special"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_subheader" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/under_construction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/app_under_construction"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/dark_special"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proceed_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
