<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_green">

<!--    // This layout is without constraint, this is used for testing performance -->
    <LinearLayout
        android:id="@+id/layout_main_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <!--TODO: on swipe show the other fragments-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/phone_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/welcome_screen_text"
                android:src="@drawable/ic_android" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/welcome_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome_to_omamehlainen"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/dark_special"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/welcome_subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/health_services_always"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/dark_special" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_second"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <!--TODO: Create a card view with light border shade-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:elevation="2dp"
                android:layout_marginHorizontal="30dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:gravity="center">

                    <!--TODO: Add image view in Linear layout-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/terms_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/i_have_read"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="@color/black" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/secure_sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:backgroundTint="@color/dark_special"
                        android:paddingHorizontal="45dp"
                        android:paddingVertical="15dp"
                        android:text="@string/secure_sign_in"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <!--TODO: Add image view in Linear layout-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/terms_secure_sign_in_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:text="@string/secure_sign_in_by_telia"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/black" />

                    <!--TODO: Add image view in Linear layout-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/other_Sign_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:maxLines="3"
                        android:text="@string/or_view_the_service"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="@color/black" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_finnish_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/don_t_have_a_finnnish"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/dark_special"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</layout>